# kdegraphics

./: Makefile  README.md  kdegraphics.spec
src/doc/: CMakeLists.txt
src/doc/gwenview/: index.cache.bz2
src/doc/kcontrol/: CMakeLists.txt
src/doc/kcontrol/kamera/: index.cache.bz2
src/doc/kgamma/: index.cache.bz2
src/doc/kolourpaint/: index.cache.bz2
src/doc/kruler/: index.cache.bz2
src/doc/ksnapshot/: index.cache.bz2
src/doc/okular/: index.cache.bz2
src/kolourpaint/dialogs/: kpDocumentSaveOptionsPreviewDialog.h
src/kolourpaint/imagelib/transforms/: kpTransformCrop.cpp
src/libs/: CMakeLists.txt
src/strigi-analyzer/exr/: kfile_exr.cpp  kfile_exr.h
src/thumbnailers/ps/: dscparse.cpp  dscparse.h
