if(Q_WS_X11)
    add_subdirectory(ksnapshot)
    if (X11_xf86vmode_FOUND)
       add_subdirectory(kgamma)
    endif (X11_xf86vmode_FOUND)
endif(Q_WS_X11)

if(KDE4_GPHOTO2 AND GPHOTO2_FOUND)
   add_subdirectory(kcontrol)
endif(KDE4_GPHOTO2 AND GPHOTO2_FOUND)
if(QIMAGEBLITZ_FOUND)
  add_subdirectory(kolourpaint)
  add_subdirectory(okular)
endif(QIMAGEBLITZ_FOUND)
add_subdirectory(kruler)
#add_subdirectory(kcolorchooser)
if (EXIV2_FOUND AND JPEG_FOUND)
   add_subdirectory(gwenview)
endif (EXIV2_FOUND AND JPEG_FOUND)
